# hello-ppa-world

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: build-test.yml
debian/: changelog  control  copyright  rules
include/helloppaworld/: helloppaworld.hpp
src/: helloppaworld.cpp
test/: main.cpp
